Fix text with code tag becoming invisible in dark mode

--- a/layouts/css/layout/_dark-theme.scss
+++ b/layouts/css/layout/_dark-theme.scss
@@ -130,6 +130,7 @@
     }
     code {
       background-color: $dark-code-background;
+      color: $light-gray
     }
   }
 }
